fix: notice-bar wrap if set extra & closeable together

--- a/src/components/notice-bar/notice-bar.less
+++ b/src/components/notice-bar/notice-bar.less
@@ -66,6 +66,8 @@
   }
 
   & .@{class-prefix-notice-bar}-right {
+    display: flex;
+    align-items: center;
     flex-shrink: 0;
     margin-left: 12px;
   }
